--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
       <div class = "container">
     <%= yield %>
       </div>
-    <footer>
+    <footer style="left: 0px;">
     <p>Contribution for you</p>
     <p>© 2020 </p>
   </footer>
