--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -146,3 +146,11 @@ body {
 }
 
 .glyphicon glyphicon-log-in {}
+
+
+.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin: -14px 0;
+  border-radius: 4px;
+}
